2001-07-17  Dan Espen  <dane@mk.telcordia.com>

	* index.html (Created): Flood is no longer news.
	New streamlined layout.

2001-07-10  Mikhael Goikhman  <migo@homemail.com>

	* generated/manpages/index.html:
	* generated/manpages/fvwm-config.html:
	added the man page of fvwm-config

2001-07-04  Mikhael Goikhman  <migo@homemail.com>

	* generated/manpages/index.html:
	* generated/index.html:
	renamed from man-pages.html to index.html,
	implemented support for man2html found with man on linux

	* generated/manpages/*.html:
	regenerated, now pages do not have fixed column size, i.e. browser
	resizing is allowed, some more features

2001-07-04  Dan Espen  <dane@mk.telcordia.com>

	* generated/manpages/man-pages.html: Regenerate pages on Linux,
	fvwm2.1 is producing a short synopsis on Sun, HP, AIX.

2001-07-03  Dan Espen  <dane@mk.telcordia.com>

	* generated/manpages/man-pages.html: Bring man pages up to 2.4.0 level.
	Remove FvwmAudio,Config,GoodStuff,Talk.

2001-07-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.4.0

2001-06-28  olicha  <olivier.chapuis@free.fr>

	* links.html: added a link to fvwm-ewmh

2001-06-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html: fixed latest beta release number

2001-06-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html, index.html: News Flash, download 2.3.33.

2001-06-20  Dan Espen  <dane@mk.telcordia.com>

	* index.html: News about fvwm.org's status.

2001-05-10  Mikhael Goikhman  <migo@homemail.com>

	* generated/{FAQ,NEWS}.html: regenerated

2001-05-04  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* download.html, index.html: update for 2.3.32.

2001-05-01  Dan Espen  <dane@mk.telcordia.com>

	* generated/FAQ.html: Regenerated FAQ.

2001-04-16  Dan Espen  <dane@mk.telcordia.com>

	* index.html:
	* download.html: Typos.

2001-04-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html, index.html: News Flash, download 2.3.31.

2001-03-30  Mikhael Goikhman  <migo@homemail.com>
