@@ -1,3 +1,8 @@
+2001-07-22  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* mod_f2m_communication.html:
+	added description for Xinerama
+
 2001-07-17  Dan Espen  <dane@mk.telcordia.com>
 
 	* index.html (Created): Flood is no longer news.
